--- a/TaskWPF/MainWindow.xaml
+++ b/TaskWPF/MainWindow.xaml
@@ -5,8 +5,134 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TaskWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MainWindow" Height="800" Width="1280" WindowState="Maximized">
+    <Window.Resources>
+        <Style x:Key="tbWhite">
+            <Setter Property="Control.Foreground" Value="White"/>
+            <Setter Property="Control.FontSize" Value="20"/>
+            <Setter Property="Control.FontWeight" Value="SemiBold"/>
+        </Style>
+        <Style x:Key="tbGray">
+            <Setter Property="Control.Foreground" Value="Gray"/>
+            <Setter Property="Control.FontSize" Value="20"/>
+            <Setter Property="Control.FontWeight" Value="SemiBold"/>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="Padding" Value="10 5 30 5"/>
+            <Setter Property="BorderThickness" Value="3"/>
+            <Setter Property="BorderBrush" Value="White"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Background" Value="Gray"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Style.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="5"/>
+                </Style>
+            </Style.Resources>
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="BorderThickness" Value="3"/>
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="Height" Value="50"/>
+            <Setter Property="BorderBrush" Value="White"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Background" Value="DimGray"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Style.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="5"/>
+                </Style>
+            </Style.Resources>
+        </Style>
+    </Window.Resources>
+    <Grid Background="Gray">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="20*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="20*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TabControl FontSize="20" Grid.Row="1" Grid.Column="1" SelectedIndex="4">
+            <TabItem Header="File">File</TabItem>
+            <TabItem Header="Notifications">Notifications</TabItem>
+            <TabItem Header="Status">Status</TabItem>
+            <TabItem Header="View">View</TabItem>
+            <TabItem Header="Customer">Customer</TabItem>
+        </TabControl>
+        <Border Grid.Row="2" Grid.Column="1" BorderThickness="2" BorderBrush="DarkGray">
+            <Grid Background="Black">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="20*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="20*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid Grid.Column="1" Grid.Row="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="3*"/>
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Row="0" Margin="0 10 0 10" Orientation="Horizontal">
+                        <Button Content="Customer Serarch" Background="Transparent" BorderThickness="0" FontSize="30" Foreground="Gray" FontWeight="SemiBold" Margin="0 0 20 0"/>
+                        <Button Content="Customer Edit" Background="Transparent" BorderThickness="0" FontSize="30" Foreground="White" FontWeight="SemiBold" Margin="0 0 20 0"/>
+                    </StackPanel>
+                    <Grid Grid.Row="1" Background="DimGray" Margin="0 5 0 5">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 0 10 0">
+                            <Button Content="Save data" Margin="0 0 10 0" VerticalAlignment="Center"/>
+                            <Button Content="Close" VerticalAlignment="Center"/>
+                        </StackPanel>
+                    </Grid>
+                    <Grid Grid.Row="2" Background="DimGray" Margin="0 5 0 5">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid Margin="10">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Grid.Column="0" Style="{StaticResource tbWhite}" Text="First Name:"/>
+                                <TextBlock Grid.Row="1" Grid.Column="0" Style="{StaticResource tbWhite}" Text="Last Name:"/>
+                                <TextBlock Grid.Row="2" Grid.Column="0" Style="{StaticResource tbWhite}" Text="Company Name:"/>
+                                <TextBlock Grid.Row="3" Grid.Column="0" Style="{StaticResource tbGray}" Foreground="Black" Text="PhoneNumbers"/>
+                                <TextBlock Grid.Row="4" Grid.Column="0" Style="{StaticResource tbWhite}" Text="Phone:"/>
+                                <TextBlock Grid.Row="5" Grid.Column="0" Style="{StaticResource tbWhite}" Text="Fax:"/>
+                                <TextBox Grid.Row="0" Grid.Column="1"/>
+                                <TextBox Grid.Row="1" Grid.Column="1"/>
+                                <TextBox Grid.Row="2" Grid.Column="1"/>
+                                <TextBox Grid.Row="4" Grid.Column="1"/>
+                                <TextBox Grid.Row="5" Grid.Column="1"/>
+                            </Grid>
+                            <StackPanel Grid.Column="1" Margin="10" Orientation="Horizontal">
+                                <TextBlock Style="{StaticResource tbWhite}" Margin="10" Text="Birthday"/>
+                                <Calendar/>
+                            </StackPanel>
+                        </Grid>
+                    </Grid>
+                </Grid>
+            </Grid>
+        </Border>
     </Grid>
 </Window>
