--- a/TaskWPF/MainWindow.xaml
+++ b/TaskWPF/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TaskWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1280" WindowState="Maximized">
+        Title="MainWindow" Height="800" MinHeight="800" MinWidth="1280" Width="1280" WindowState="Maximized">
     <Window.Resources>
         <Style x:Key="tbWhite">
             <Setter Property="Control.Foreground" Value="White"/>
